# GetVersion

./: README.md  TODO.md  action.yml
.github/workflows/: tests.yaml
tests/: Cargo.toml  manifest.json
tests/samples/: CMakeLists.txt  package.json
