[package]
name = "winapi_app"
version = "2.2.3"
edition = "2021"

[build-dependencies]
winres = "0.1.12"

[dependencies]
mslnk = "0.1.8"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Media_Audio",
]
